# rm1

rm-hero/: CMakeLists.txt  main.cpp
rm-hero/include/: debug.h
rm-hero/include/Resolver/: GimbalControl.h
rm-hero/include/SerialPort/: SerialPort.h
rm-hero/include/Tracker/: Tracker.h
rm-hero/include/armor_detector/: ArmorDetetion.h  TargetChooser.h  armor.h  classifier.h  inference.h
rm-hero/include/kalmanfilter/: KalmanFilter.h
rm-hero/include/outpost/: outpost.h
rm-hero/src/SerialPort/: SerialPort.cpp
rm-hero/src/armor_detector/: ArmorDetetion.cpp  armor.cpp  inference.cpp
rm-hero/src/kalmanfilter/: KalmanFilter.cpp
rm-hero/src/outpost/: outpost.cpp
rm_auto_aim-Hero/: CMakeLists.txt  main.cpp
rm_auto_aim-Hero/include/: debug.h
rm_auto_aim-Hero/include/Preprocess/: Preprocess.h
rm_auto_aim-Hero/include/Resolver/: Resolver.h
rm_auto_aim-Hero/include/SerialPort/: SerialPort.h
rm_auto_aim-Hero/include/Tracker/: Predictor.h
rm_auto_aim-Hero/include/armor_detector/: ArmorDetetion.h  armor.h
rm_auto_aim-Hero/include/kalmanfilter/: KalmanFilter.h
rm_auto_aim-Hero/include/outpost/: Array.h  newArray.h  outpost.h  params.h
rm_auto_aim-Hero/src/Resolver/: Resolver.cpp
rm_auto_aim-Hero/src/SerialPort/: SerialPort.cpp
rm_auto_aim-Hero/src/armor_detector/: ArmorDetetion.cpp  armor.cpp
rm_auto_aim-Hero/src/kalmanfilter/: KalmanFilter.cpp
rm_auto_aim-Hero/src/outpost/: outpost.cpp
